--- a/frontend/fronted/package.json
+++ b/frontend/fronted/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "core-js": "^2.5.4",
+    "ng2-tooltip-directive": "^2.9.20",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
