--- a/frontend/fronted/package.json
+++ b/frontend/fronted/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "core-js": "^2.5.4",
     "ng2-tooltip-directive": "^2.9.20",
